--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.38.0",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "humanize-duration": "^3.33.0",
     "quill": "^2.0.3",
@@ -21,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "react-simple-star-rating": "^5.1.7",
+    "react-toastify": "^11.0.5",
     "react-youtube": "^10.1.0",
     "tailwindcss": "^4.1.11",
     "uniqid": "^5.4.0"
